--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="hero">
     <div class="hero-content">
-        <h1>Welcome to Planka Flask</h1>
+        <h1>Welcome to Flask</h1>
         <p>A simple kanban board application</p>
         <div class="auth-buttons">
             <a href="{{ url_for('login') }}" class="btn btn-primary">Login</a>
